--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ crossorigin=""></script>
 <body>
 	<h1> Hello Dumbass</h1>
 	 <div id="map"></div>
+	 <!-- Adding hyperlink with target="_blank" to open in a new tab -->
+	<a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Go to Windy.com</a>
 <script src =strava_api.js></script>
 </body>
 </html>
