--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ crossorigin=""></script>
 	 <div id="map"></div>
 	 <!-- Adding hyperlink with target="_blank" to open in a new tab -->
 	<a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Go to Windy.com</a>
+
+	<!-- Adding the second hyperlink with target="_blank" to open in a new tab -->
+	<a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Go to Google Earth</a>
+	
 <script src =strava_api.js></script>
 </body>
 </html>
