--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@ crossorigin=""></script>
 	<h1> Hello Dumbass</h1>
 	<div id="map"></div>
 	 
-	<div class="links-container">
-	 <!-- Adding hyperlink with target="_blank" to open in a new tab -->
-	<a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Go to Windy.com</a>
+	<div class="banner">
+    <h2>Planning Tools</h2>
+    <!-- Links to Windy.com and Google Earth with target="_blank" to open in a new tab -->
+    <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Go to Windy.com</a>
+    <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Go to Google Earth</a>
+  </div>
 
-	<!-- Adding the second hyperlink with target="_blank" to open in a new tab -->
-	<a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Go to Google Earth</a>
-	</div>
-	
 <script src =strava_api.js></script>
 </body>
 </html>
