--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@ crossorigin=""></script>
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<h1> Hello Dumbass</h1>
+	<!-- Top Banner -->
+    <div class="top-banner">
+        <h2>Logo Placeholder</h2>
+        <h1>Title</h1>
+        <nav>
+            <!-- Placeholder links for a bio -->
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+        </nav>
+    </div>
 	<div id="map"></div>
 	 
 	<div class="banner">
