reverse order of paddle

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ crossorigin=""></script>
 	<!-- Top Banner -->
     <div class="top-banner">
         <h2>Logo Placeholder</h2>
-        <h1>Title</h1>
+        <h1>My Oceanic Odyssey</h1>
         <nav>
             <!-- Placeholder links for a bio -->
             <a href="#">Link 1</a>
