colors, font and about the author

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ crossorigin=""></script>
         <h1>My Oceanic Odyssey</h1>
         <nav>
             <!-- Placeholder links for a bio -->
-            <a href="#">Link 1</a>
+            <a href="#">About the Author</a>
             <a href="#">Link 2</a>
             <a href="#">Link 3</a>
         </nav>
