--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
 integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
 crossorigin=""/>
@@ -16,7 +18,7 @@ crossorigin=""></script>
 <body>
 	<!-- Top Banner -->
     <div class="top-banner">
-        <h2>Logo Placeholder</h2>
+    	<img src="logo_placeholder.png" alt="Logo Placeholder"> <!-- Replace "your-logo.png" with the actual filename of your PNG image -->
         <h1>My Oceanic Odyssey</h1>
         <nav>
             <!-- Placeholder links for a bio -->
