--- a/index.html
+++ b/index.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-crossorigin=""/>
-
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-crossorigin=""></script>
-
-
-<script src= Polyline.encoded.js></script>
-<link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+    crossorigin=""></script>
+    <script src="Polyline.encoded.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-	<!-- Top Banner -->
+    <!-- Top Banner -->
     <div class="top-banner">
-    	<img src="logo_placeholder.png" alt="Logo Placeholder"> <!-- Replace "your-logo.png" with the actual filename of your PNG image -->
-        <h1>My Oceanic Odyssey</h1>
-        <nav>
-            <!-- Placeholder links for a bio -->
-            <a href="#">About the Author</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-        </nav>
+        <div class="top-content">
+            <h1>My Oceanic Odyssey</h1>
+            <nav>
+                <!-- Placeholder links for a bio -->
+                <a href="#">About the Author</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </nav>
+        </div>
+        <img src="top_banner.jpeg" alt="Banner Image">
     </div>
-	<div id="map"></div>
-	 
-	<div class="banner">
-    <h2>Planning Tools</h2>
-    <!-- Links to Windy.com and Google Earth with target="_blank" to open in a new tab -->
-    <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Go to Windy.com</a>
-    <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Go to Google Earth</a>
-  </div>
+    <div id="map"></div>
+     
+    <div class="banner">
+        <h2>Planning Tools</h2>
+        <!-- Links to Windy.com and Google Earth with target="_blank" to open in a new tab -->
+        <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Go to Windy.com</a>
+        <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Go to Google Earth</a>
+    </div>
 
-<script src =strava_api.js></script>
+    <script src="strava_api.js"></script>
 </body>
 </html>
