--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <h1>My Oceanic Odyssey</h1>
                 <nav>
                     <!-- Placeholder links for a bio -->
-                    <a href="#">About the Author</a>
+                    <a href="about.html">About the Author</a>
                     <a href="#">Link 2</a>
                     <a href="#">Link 3</a>
                 </nav>
             </div>
-            <img src="top_banner.jpeg" alt="Banner Image">
+            <img src="photos/top_banner.jpeg" alt="Banner Image">
         </div>
         <div id="map"></div>
         <div class="map-placeholder">
@@ -35,21 +35,20 @@
         </div>
     </div>
 
-    <!-- Second Page - Blog Posts -->
-    <div class="page">
-        <div class="blog-posts">
-            <h2>Blog Posts</h2>
-            <!-- Container for blog posts -->
-            <div class="blog-posts-container">
-                <button id="left-arrow" class="scroll-btn left-arrow">&lt;</button>
-                <div class="posts-wrapper">
-                    <!-- Dynamic blog posts will be inserted here -->
-                </div>
-                <button id="right-arrow" class="scroll-btn right-arrow">&gt;</button>
+<!-- Second Page - Blog Posts -->
+<div class="page">
+    <div class="blog-posts">
+        <h2>Blog Posts</h2>
+        <!-- Container for blog posts -->
+        <div class="blog-posts-container">
+            <button id="top-arrow" class="scroll-btn top-arrow">&#94;</button> <!-- Changed symbol to up arrow -->
+            <div class="posts-wrapper">
+                <!-- Dynamic blog posts will be inserted here -->
             </div>
+            <button id="bottom-arrow" class="scroll-btn bottom-arrow">&#118;</button> <!-- Changed symbol to down arrow -->
         </div>
     </div>
-
+</div>
 
     <!-- Bottom Banner -->
     <div class="banner">
