--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Assuming your CSS file is named style.css -->
 </head>
 <body>
+    <div class="content-wrapper">
     <div class="top-banner">
             <div class="top-content">
                 <h1>My Oceanic Odyssey</h1>
@@ -30,6 +31,7 @@
                 Living in Honolulu, Drew finds himself at the intersection of his passions: the deep blue sea, advanced technology, and the serene beauty of island life. His unique background in marine science, combined with his expertise in data science and engineering, positions him as a valuable asset in tackling some of the most pressing challenges facing the marine and defense sectors today. When he's not immersed in data or exploring the depths of the ocean, Drew enjoys surfing, hiking, and experiencing the rich cultural tapestry of Hawaii.
             </p>
         </div>
+    </div>
     </div>
 </body>
 </html>
