--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About the Author</title>
     <link rel="stylesheet" href="styles.css"> <!-- Assuming your CSS file is named style.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <div class="content-wrapper">
@@ -19,6 +21,17 @@
                 </nav>
             </div>
             <img src="photos/top_banner.jpeg" alt="Banner Image">
+            <div class="social-media-links">
+            <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
+                <i class="fab fa-strava"></i>
+            </a>
+                </div
         </div>
 
     <div class="content">
