social media stuff
icons taken out of banner

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 <body>
     <!-- First Page - Map -->
     <div class="page">
-        <!-- Top Banner -->
-        <div class="top-banner">
-            <div class="top-content">
-                <h1>My Oceanic Odyssey</h1>
-                <nav>
-                    <!-- Placeholder links for a bio -->
-                    <a href="about.html">About the Author</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                </nav>
-            </div>
-            <img src="photos/top_banner.jpeg" alt="Banner Image">
-               <div class="social-media-links">
+    <!-- Top Banner -->
+    <div class="top-banner">
+        <div class="top-content">
+            <h1>My Oceanic Odyssey</h1>
+            <nav>
+                <a href="about.html">About the Author</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </nav>
+        </div>
+        <img src="photos/top_banner.jpeg" alt="Banner Image">
+    </div>
+     <div class="social-media-links">
             <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
@@ -38,14 +38,15 @@
             <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
                 <i class="fab fa-strava"></i>
             </a>
-                </div>
         </div>
-        <div id="map"></div>
-        <div class="map-placeholder">
-            <!-- Placeholder text below the map -->
-            <p>This is a placeholder for content below the map on the first page.</p>
-        </div>
+    <div id="map"></div>
+    <div class="map-placeholder">
+        <!-- Social Media Links now here -->
+       
+
     </div>
+</div>
+
 
 <!-- Second Page - Blog Posts -->
 <div class="page">
