--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                 <nav>
                     <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
-                    <a href="#">Link 2</a>
+                    <a href="#">Introduction</a>
                     <a href="#">Link 3</a>
                 </nav>
             </div>
