--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     <div id="map"></div> <!-- Map container -->
     
     </div>
-</div>
 
 
 
-<!-- Second Page - Blog Posts -->
-<div class="page">
+
+<!--  - Blog Posts -->
+
     <div class="blog-posts">
         <h2>Blog Posts</h2>
         <!-- Container for blog posts -->
