color theme change
changed colors and improved blog post scroll icons

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <h2>Blog Posts</h2>
         <!-- Container for blog posts -->
         <div class="blog-posts-container">
-            <button id="top-arrow" class="scroll-btn top-arrow">&#94;</button> <!-- Changed symbol to up arrow -->
+            <button id="top-arrow" class="scroll-btn top-arrow">&#9650;</button>
             <div class="posts-wrapper">
                 <!-- Dynamic blog posts will be inserted here -->
             </div>
-            <button id="bottom-arrow" class="scroll-btn bottom-arrow">&#118;</button> <!-- Changed symbol to down arrow -->
+            <button id="bottom-arrow" class="scroll-btn bottom-arrow">&#9660;</button>
         </div>
     </div>
 </div>
@@ -69,8 +69,8 @@
     <div class="banner">
         <h2>Planning Tools</h2>
         <!-- Links to Windy.com and Google Earth with target="_blank" to open in a new tab -->
-        <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Go to Windy.com</a>
-        <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Go to Google Earth</a>
+        <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Windy.com</a>
+        <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
     </div>
 
     <script src="strava_api.js"></script>
