blog post links
blog post place holder

--- a/index.html
+++ b/index.html
@@ -36,12 +36,16 @@
             <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
+            <a href="https://medium.com/" target="_blank" aria-label="Medium">
+            <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
+            </a>
             <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
                 <i class="fab fa-strava"></i>
             </a>
+
         </div>
     <div id="map"></div> <!-- Map container -->
     
@@ -53,7 +57,7 @@
 <!--  - Blog Posts -->
 
     <div class="blog-posts">
-        <h2>Blog Posts</h2>
+        <h1>Blog Posts</h1>
         <!-- Container for blog posts -->
         <div class="blog-posts-container">
             <button id="top-arrow" class="scroll-btn top-arrow">&#9650;</button>
