a whole bunch of shit
introduction, about author, color changes, spotify,

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                     <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
                     <a href="#">Introduction</a>
-                    <a href="#">Link 3</a>
+                    <a href="#">Support</a>
                 </nav>
             </div>
             <img src="photos/top_banner.jpeg" alt="Banner Image">
@@ -25,13 +25,20 @@
             <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
+            <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
+            <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
+            </a>
             <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
                 <i class="fab fa-strava"></i>
             </a>
-                </div
+             <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
+                <i class="fab fa-spotify"></i>
+            </a>
+
+        </div>
         </div>
 
     <div class="content">
@@ -39,9 +46,10 @@
             <img src="photos/author.jpeg" alt="Author" class="author-image"> <!-- Centered author image -->
             <p class="author-description">
                 <!-- Your text about the author goes here -->
-                Drew Burrier holds a Master's Degree in Marine Science with a concentration in physical oceanography from Moss Landing Marine Laboratories, where he delved deep into the mysteries of the ocean's movements and its intricate relationship with the broader Earth system. Transitioning from academia to practical application, Drew has applied his vast knowledge and analytical skills in the service of the US Navy, working as a data scientist and engineer. His work spans a variety of challenging environments, focusing on leveraging data to solve complex problems, optimize performance, and contribute to the safety and efficiency of naval operations.
+               Drew Burrier holds a Master's Degree in Marine Science with a concentration in physical oceanography from Moss Landing Marine Laboratories, where he delved deep into the mysteries of the ocean's movements and its intricate relationship with the broader Earth system. Transitioning from academia to practical application, Drew has applied his vast knowledge and analytical skills as a data scientist and engineer. His work spans a variety of challenging environments: numerical weather simulation, environmental protection, and humanitarian assistance and disaster relief. 
 
-                Living in Honolulu, Drew finds himself at the intersection of his passions: the deep blue sea, advanced technology, and the serene beauty of island life. His unique background in marine science, combined with his expertise in data science and engineering, positions him as a valuable asset in tackling some of the most pressing challenges facing the marine and defense sectors today. When he's not immersed in data or exploring the depths of the ocean, Drew enjoys surfing, hiking, and experiencing the rich cultural tapestry of Hawaii.
+               Living in Honolulu, Drew is immersed in his passions: the sea, an analytical and creative approach to the world, and the serene beauty of island life. With his unique background in marine science and expertise in data science and engineering, Drew is excited to apply his technical and scientific skillset to this new adventure in creative expression. When he's not immersed in data or exploring the depths of the ocean, Drew enjoys skiing, surfing, hiking, and sucking the marrow out of life.
+
             </p>
         </div>
     </div>
