--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://medium.com/" target="_blank" aria-label="Medium">
+            <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
             <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
             </a>
             <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
@@ -44,6 +44,9 @@
             </a>
             <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
                 <i class="fab fa-strava"></i>
+            </a>
+             <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
+                <i class="fab fa-spotify"></i>
             </a>
 
         </div>
