--- a/introduction.html
+++ b/introduction.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About the Author</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Assuming your CSS file is named style.css -->
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file name is correct -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 </head>
 <body>
     <div class="content-wrapper">
-    <div class="top-banner">
+        <div class="top-banner">
             <div class="top-content">
                 <h1>My Oceanic Odyssey</h1>
                 <nav>
@@ -22,29 +21,41 @@
             </div>
             <img src="photos/top_banner.jpeg" alt="Banner Image">
             <div class="social-media-links">
-            <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
-                <i class="fab fa-strava"></i>
-            </a>
-                </div
+                <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
+                    <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
+                </a>
+                <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
+                    <i class="fab fa-strava"></i>
+                </a>
+                <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
+                    <i class="fab fa-spotify"></i>
+                </a>
+            </div>
         </div>
+        <div class="content">
+            <div class="author-profile">
+                <div class="introduction-photos">
+                    <img src="photos/introduction_1.jpg" alt="Author" class="introduction-photos"> <!-- Centered author image -->
+                    <p class="author-description">
+                    <!-- Your text about the author goes here -->
+                  fuck shit cock ass
 
-    <div class="content">
-        <div class="author-profile">
-            <img src="photos/author.jpeg" alt="Author" class="author-image"> <!-- Centered author image -->
-            <p class="author-description">
-                <!-- Your text about the author goes here -->
-                Drew Burrier holds a Master's Degree in Marine Science with a concentration in physical oceanography from Moss Landing Marine Laboratories, where he delved deep into the mysteries of the ocean's movements and its intricate relationship with the broader Earth system. Transitioning from academia to practical application, Drew has applied his vast knowledge and analytical skills in the service of the US Navy, working as a data scientist and engineer. His work spans a variety of challenging environments, focusing on leveraging data to solve complex problems, optimize performance, and contribute to the safety and efficiency of naval operations.
-
-                Living in Honolulu, Drew finds himself at the intersection of his passions: the deep blue sea, advanced technology, and the serene beauty of island life. His unique background in marine science, combined with his expertise in data science and engineering, positions him as a valuable asset in tackling some of the most pressing challenges facing the marine and defense sectors today. When he's not immersed in data or exploring the depths of the ocean, Drew enjoys surfing, hiking, and experiencing the rich cultural tapestry of Hawaii.
-            </p>
+                </p>
+                    <a href="https://medium.com/@drew.burrier/introduction" target="_blank" class="link-button">Read Introduction on Medium</a>
+                    <img src="photos/introduction_2.jpeg" alt="Author" class="introduction-photos"> <!-- Second image -->
+                </div>
+                <p class="author-description">
+                    <!-- Your text about the author goes here -->
+                </p>
+            </div>
         </div>
-    </div>
     </div>
 </body>
 </html>
+
