support and introduction pages
Lots of shit

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
                 <nav>
                     <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
-                    <a href="#">Introduction</a>
-                    <a href="#">Support</a>
+                    <a href="introduction.html">Introduction</a>
+                    <a href="SUPport.html">Support</a>
                 </nav>
             </div>
             <img src="photos/top_banner.jpeg" alt="Banner Image">
