--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About the Author</title>
+    <title>Support</title>
     <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file name is correct -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -13,10 +13,10 @@
             <div class="top-content">
                 <h1>My Oceanic Odyssey</h1>
                 <nav>
-                    <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
+                    <a href="introduction.html">Introduction</a> <!-- Added Support link -->
                     <a href="about.html">About the Author</a>
-                    <a href="SUPport.html">Support</a>
+                    
                 </nav>
             </div>
             <img src="photos/top_banner.jpeg" alt="Banner Image">
@@ -41,22 +41,23 @@
         <div class="content">
             <div class="author-profile">
                 <div class="introduction-photos">
-                    <img src="photos/introduction_1.jpg" alt="Author" class="introduction-photos"> <!-- Centered author image -->
+                    <img src="photos/support_1.jpeg" alt="Support" class="author-image"> <!-- Support image 1 -->
                     <p class="author-description">
                     <!-- Your text about the author goes here -->
-                  Welcome aboard! Here, we embark on a thrilling adventure with Drew, a data scientist and oceanographer, as he sets out to accomplish an extraordinary feat: circumnavigating the breathtaking island of Oahu on a paddle board. Beyond the physical endurance required for such an endeavor, Drew's journey serves as a catalyst for profound self-discovery. Through the highs and lows of this expedition, he seeks to uncover deeper truths about himself and the world around him, sharing his reflections and insights along the way. Moreover, our mission extends beyond mere documentation; we aspire to push the boundaries of storytelling by integrating data and educational elements into our narrative. Join us as we explore the intersection of adventure, personal growth, and innovative storytelling, inspiring curiosity and discovery with every stroke of the paddle.<br><br>
-                  Click the link below to read the Full Introduction on Medium.com
+                    As I embark on an ambitious project to document my journey Stand Up Paddling around the captivating island of Oahu, I am reaching out for your generous support. While I'm fueled by passion and determination, the success of this endeavor hinges greatly on having the right equipment to navigate the vast ocean expanses safely. Your contributions through Ko-fi donations will directly aid in acquiring and maintaining the necessary gear, ensuring both my safety and the quality of the content produced. Moreover, as I strive to push the boundaries of my website and blogging format, there are inherent costs associated with enhancing user experience and expanding the reach of my narrative. Your support not only enables me to improve the platform but also fosters innovation in storytelling, allowing me to share this extraordinary journey in the most immersive and engaging manner possible. Additionally, I welcome sponsorships from businesses and brands aligned with my values and the spirit of exploration, offering them valuable exposure to a diverse and engaged audience. Together, let's embark on this adventure and push the limits of what's possible.<br><br>
 
-                </p>
-                    <a href="https://medium.com/@drew.burrier/introduction" target="_blank" class="link-button">Read Introduction on Medium</a>
-                    <img src="photos/introduction_2.jpeg" alt="Author" class="introduction-photos"> <!-- Second image -->
+                    With gratitude,<br><br>
+
+                    Drew Arlen Burrier
+                    </p>
+                    <a href="https://medium.com/@drew.burrier/support" target="_blank" class="link-button">Become A SUPporter</a>
+                    <img src="photos/support_2.jpg" alt="Support" class="author-image"> <!-- Support image 2 -->
                 </div>
                 <p class="author-description">
-                    <!-- Your text about the author goes here -->
+                    <!-- Your text about supporting the author goes here -->
                 </p>
             </div>
         </div>
     </div>
 </body>
 </html>
-
