--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
                     <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
                     <a href="introduction.html">Introduction</a>
-                    <a href="SUPport.html">Support</a>
+                    <a href="support.html">SUPport</a>
                 </nav>
             </div>
             <img src="photos/top_banner.jpeg" alt="Banner Image">
