--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 
                 <a href="introduction.html">Introduction</a>
                 <a href="about.html">About the Author</a>
-                <a href="SUPport.html">Support</a>
+                <a href="support.html">SUPport</a>
                 
             </nav>
         </div>
