--- a/introduction.html
+++ b/introduction.html
@@ -16,7 +16,7 @@
                     <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
                     <a href="about.html">About the Author</a>
-                    <a href="SUPport.html">Support</a>
+                    <a href="support.html">SUPport</a>
                 </nav>
             </div>
             <img src="photos/top_banner.jpeg" alt="Banner Image">
@@ -44,7 +44,7 @@
                     <img src="photos/introduction_1.jpg" alt="Author" class="introduction-photos"> <!-- Centered author image -->
                     <p class="author-description">
                     <!-- Your text about the author goes here -->
-                  Welcome aboard! Here, we embark on a thrilling adventure with Drew, a data scientist and oceanographer, as he sets out to accomplish an extraordinary feat: circumnavigating the breathtaking island of Oahu on a paddle board. Beyond the physical endurance required for such an endeavor, Drew's journey serves as a catalyst for profound self-discovery. Through the highs and lows of this expedition, he seeks to uncover deeper truths about himself and the world around him, sharing his reflections and insights along the way. Moreover, our mission extends beyond mere documentation; we aspire to push the boundaries of storytelling by integrating data and educational elements into our narrative. Join us as we explore the intersection of adventure, personal growth, and innovative storytelling, inspiring curiosity and discovery with every stroke of the paddle.<br><br>
+                  Welcome aboard! Here, we embark on a thrilling adventure with Drew, a data scientist and oceanographer, as he sets out to accomplish a challenging endeavor: circumnavigating the island of Oahu on a paddle board. Beyond the physical endurance required for such an adventure, Drew's journey serves as a catalyst for profound self-discovery. Through the highs and lows of this expedition, he seeks to uncover deeper truths about himself and the world around him, sharing his reflections and insights along the way. Moreover, this mission extends beyond mere documentation; we aspire to push the boundaries of storytelling by integrating data and educational elements into our narrative. Join us as we explore the intersection of adventure, personal growth, and innovative storytelling, inspiring curiosity and discovery with every stroke of the paddle.<br><br>
                   Click the link below to read the Full Introduction on Medium.com
 
                 </p>
