--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <script src="Polyline.encoded.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKS4VZRVKZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZKS4VZRVKZ');
+</script>
 <body>
  <!-- First Page - Map -->
 <div class="page">
