--- a/support.html
+++ b/support.html
@@ -4,9 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Support</title>
     <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file name is correct -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* Reset link styles */
+        a.sponsor-inquiry {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 20px;
+            background-color: #A3C6C4;
+            color: #354649;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            text-align: center;
+            transition: background-color 0.3s ease;
+        }
+
+        a.sponsor-inquiry:hover {
+            background-color: #0056b3;
+            color: #354649;
+        }
+
+        a.sponsor-inquiry:visited {
+            color: #354649;
+        }
+
+        a.sponsor-inquiry:focus {
+            outline: none;
+        }
+
+        .introduction-photos {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            margin-bottom: 20px;
+            padding: 0 20px; /* Adjust horizontal padding */
+        }
+
+        .introduction-photos img {
+            max-width: 100%; /* Ensure images fill the container */
+            height: auto; /* Maintain aspect ratio */
+            border-radius: 10px; /* Optional: adds rounded corners to your images */
+        }
+        .link-container a {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 20px;
+            background-color: #A3C6C4;
+            color: #354649;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            text-align: center;
+            transition: background-color 0.3s ease;
+        }
+
+        .link-container a:hover {
+            background-color: #0056b3;
+            color: #354649;
+        }
+
+        .link-container a:visited {
+            color: #354649;
+        }
+
+        .link-container a:focus {
+            outline: none;
+        }
+
+        .link-container {
+            display: flex;
+            justify-content: center; /* Center the links horizontally */
+            gap: 20px; /* Space between the links */
+            flex-wrap: wrap; /* Ensure links wrap on smaller screens */
+        }
+
+    </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZKS4VZRVKZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZKS4VZRVKZ');
+</script>
 <body>
     <div class="content-wrapper">
         <div class="top-banner">
@@ -14,9 +105,8 @@
                 <h1>My Oceanic Odyssey</h1>
                 <nav>
                     <a href="index.html">Main Page</a>
-                    <a href="introduction.html">Introduction</a> <!-- Added Support link -->
+                    <a href="introduction.html">Introduction</a>
                     <a href="about.html">About the Author</a>
-                    
                 </nav>
             </div>
             <img src="photos/top_banner.jpeg" alt="Banner Image">
@@ -25,7 +115,7 @@
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
-                    <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
+                    <i class="fab fa-medium"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
                     <i class="fab fa-linkedin-in"></i>
@@ -43,14 +133,14 @@
                 <div class="introduction-photos">
                     <img src="photos/support_1.jpeg" alt="Support" class="author-image"> <!-- Support image 1 -->
                     <p class="author-description">
-                    <!-- Your text about the author goes here -->
-                    As I embark on an ambitious project to document my journey Stand Up Paddling around the captivating island of Oahu, I am reaching out for your generous support. While I'm fueled by passion and determination, the success of this endeavor hinges greatly on having the right equipment to navigate the vast ocean expanses safely. Your contributions through Ko-fi donations will directly aid in acquiring and maintaining the necessary gear, ensuring both my safety and the quality of the content produced. Moreover, as I strive to push the boundaries of my website and blogging format, there are inherent costs associated with enhancing user experience and expanding the reach of my narrative. Your support not only enables me to improve the platform but also fosters innovation in storytelling, allowing me to share this extraordinary journey in the most immersive and engaging manner possible. Additionally, I welcome sponsorships from businesses and brands aligned with my values and the spirit of exploration, offering them valuable exposure to a diverse and engaged audience. Together, let's embark on this adventure and push the limits of what's possible.<br><br>
-
+                    As I embark on an ambitious project to document my journey Stand Up Paddling around the captivating island of Oahu, I am reaching out for your generous support. While I'm fueled by passion and determination, the success of this endeavor hinges greatly on having the right equipment to navigate the ocean safely. Your contributions through Ko-fi donations will directly aid in acquiring and maintaining the necessary gear, ensuring both my safety and the quality of the content produced. Moreover, as I strive to push the boundaries of my website and blogging format, there are inherent costs associated with enhancing user experience and expanding the reach of my narrative. Your support not only enables me to improve the platform but also fosters innovation in storytelling, allowing me to share this extraordinary journey in the most immersive and engaging manner possible. Additionally, I welcome sponsorships from businesses and brands aligned with my values and the spirit of exploration, offering them valuable exposure to a diverse and engaged audience. Together, let's embark on this adventure and push the limits of what's possible.<br><br>
                     With gratitude,<br><br>
-
                     Drew Arlen Burrier
                     </p>
-                    <a href="https://medium.com/@drew.burrier/support" target="_blank" class="link-button">Become A SUPporter</a>
+                     <div class="link-container">
+                        <a href="https://ko-fi.com/drewburrier" target="_blank" class="link-button">Become A SUPporter</a>
+                        <a href="mailto:drew.burrier@gmail.com?subject=Sponsor Inquiry" class="sponsor-inquiry">Sponsor Inquiries</a>
+                    </div>
                     <img src="photos/support_2.jpg" alt="Support" class="author-image"> <!-- Support image 2 -->
                 </div>
                 <p class="author-description">
@@ -61,3 +151,4 @@
     </div>
 </body>
 </html>
+
