--- a/introduction.html
+++ b/introduction.html
@@ -57,7 +57,7 @@
                   Click the link below to read the Full Introduction on Medium.com
 
                 </p>
-                    <a href="https://medium.com/@drew.burrier/introduction" target="_blank" class="link-button">Read Introduction on Medium</a>
+                    <a href="https://medium.com/@drew.burrier/my-oceanic-odyssey-new-beginnings-a6ffd4f60d44" target="_blank" class="link-button">Read Introduction on Medium</a>
                     <img src="photos/introduction_2.jpeg" alt="Author" class="introduction-photos"> <!-- Second image -->
                 </div>
                 <p class="author-description">
