--- a/index.html
+++ b/index.html
@@ -48,12 +48,16 @@
             <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
             <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
             </a>
+
+            <a href="https://twitter.com/drewarlenb" target="_blank" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+            </a>
             <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
                 <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
+            <!--  <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
                 <i class="fab fa-strava"></i>
-            </a>
+            </a> -->
              <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
                 <i class="fab fa-spotify"></i>
             </a>
