--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
                     <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
                     <a href="introduction.html">Introduction</a>
+                    <a href="Science.html">Science</a>
                     <a href="support.html">SUPport</a>
                 </nav>
             </div>
