--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 
             </nav>
         </div>
-        <img src="photos/top_banner.jpeg" alt="Banner Image">
+         <!-- <img src="photos/top_banner.jpeg" alt="Banner Image"> -->
     </div>
     <div class="map-placeholder">
         <!-- Social Media Links now here -->
@@ -48,11 +48,6 @@
     </div>
     
 </div>
-
-
-
-
-<!--  - Blog Posts -->
 
 
     <!-- Bottom Banner -->
