--- a/about.html
+++ b/about.html
@@ -30,25 +30,7 @@
                     <a href="support.html">SUPport</a>
                 </nav>
             </div>
-            <img src="photos/top_banner.jpeg" alt="Banner Image">
-            <div class="social-media-links">
-            <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
-            <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
-            </a>
-            <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-            <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
-                <i class="fab fa-strava"></i>
-            </a>
-             <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
-                <i class="fab fa-spotify"></i>
-            </a>
-
-        </div>
+           <!-- <img src="photos/top_banner.jpeg" alt="Banner Image"> -->
         </div>
 
     <div class="content">
@@ -65,4 +47,41 @@
     </div>
     </div>
 </body>
+   <!-- Bottom Banner -->
+<div class="banner">
+    <div class="hamburger-menu" onclick="toggleMenu()">
+        &#9776; <!-- Hamburger Icon -->
+    </div>
+    <div id="planning-tools" class="planning-tools">
+        <span class="close-btn" onclick="toggleMenu()">&times;</span> <!-- Close Button -->
+       
+        <div class="links-container">
+             <h2>Planning Tools</h2>
+            <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Windy.com</a>
+            <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
+        </div>
+    </div>
+     <div class="social-media-links">
+            <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
+            <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
+            </a>
+
+            <a href="https://twitter.com/drewarlenb" target="_blank" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/drew-burrier-90092067/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <!--  <a href="https://www.strava.com/athletes/yourusername" target="_blank" aria-label="Strava">
+                <i class="fab fa-strava"></i>
+            </a> -->
+             <a href="https://open.spotify.com/user/12148616871" target="_blank" aria-label="Spotify">
+                <i class="fab fa-spotify"></i>
+            </a>
+
+        </div>
+</div>
 </html>
