--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <span class="close-btn" onclick="toggleMenu()">&times;</span> <!-- Close Button -->
        
         <div class="links-container">
+             <a href="gallery.html">Photo Gallery</a> <!-- New link to the gallery -->
              <h2>Planning Tools</h2>
             <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Windy.com</a>
             <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
