other page fixes?

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
+            <a href="https://medium.com/my-oceanic-odyssey" target="_blank" aria-label="Medium">
             <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
             </a>
 
