--- a/support.html
+++ b/support.html
@@ -144,6 +144,7 @@
         <span class="close-btn" onclick="toggleMenu()">&times;</span> <!-- Close Button -->
        
         <div class="links-container">
+            <a href="gallery.html">Photo Gallery</a> <!-- New link to the gallery -->
              <h2>Planning Tools</h2>
             <a href="https://www.windy.com/21.305/-157.856?2024022418,21.311,-158.159,10,m:egUaLQ" target="_blank">Windy.com</a>
             <a href="https://earth.google.com/web/@21.26186347,-157.81431259,47.74905754a,5624.30629881d,35y,360h,0t,0r" target="_blank">Google Earth</a>
@@ -153,7 +154,7 @@
             <a href="https://www.instagram.com/drewski1003" target="_blank" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://medium.com/@drew.burrier" target="_blank" aria-label="Medium">
+            <a href="https://medium.com/my-oceanic-odyssey" target="_blank" aria-label="Medium">
             <i class="fab fa-medium"></i> <!-- Assuming FontAwesome has a Medium icon -->
             </a>
 
@@ -172,5 +173,7 @@
 
         </div>
 </div>
+
+<script src="strava_api.js"></script>
 </html>
 
