--- a/support.html
+++ b/support.html
@@ -107,7 +107,7 @@
                     <a href="index.html">Main Page</a>
                     <a href="introduction.html">Introduction</a>
                     <a href="about.html">About the Author</a>
-                    <a href="Science.html">Science</a>
+                    <a href="science.html">Science</a>
                 </nav>
             </div>
             <!-- <img src="photos/top_banner.jpeg" alt="Banner Image"> -->
