--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About the Author</a>
-                <a href="Science.html">Science</a>
+                <a href="science.html">Science</a>
                 <a href="support.html">SUPport</a>
             </nav>
         </div>
