--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 
                 <a href="introduction.html">Introduction</a>
                 <a href="about.html">About the Author</a>
-                 <a href="Science.html">Science</a>
+                 <a href="science.html">Science</a>
                 <a href="support.html">SUPport</a>
                 
             </nav>
