--- a/introduction.html
+++ b/introduction.html
@@ -25,7 +25,7 @@
                     <!-- Placeholder links for a bio -->
                     <a href="index.html">Main Page</a>
                     <a href="about.html">About the Author</a>
-                    <a href="Science.html">Science</a>
+                    <a href="science.html">Science</a>
                     <a href="support.html">SUPport</a>
                 </nav>
             </div>
