--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <meta name="keywords" content="Drew Burrier, Stand Up Paddling, Hawaii, Oahu, SUP, Paddle Adventure, Ocean Journey">
 <meta name="description" content="Join Drew Burrier on his stand-up paddle adventure around Oahu, Hawaii. Explore SUP and ocean adventure through My Oceanic Odyssey.">
+<title>My Oceanic Odyssey: Stand Up Paddling Adventure in Oahu</title>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
